apps/base/frontend/hackathon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'knighthacks-hackathon-frontend'
  labels:
    app.kubernetes.io/name: hackathon
    app.kubernetes.io/part-of: knighthacks-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hackathon
    app.kubernetes.io/part-of: knighthacks-frontend
