apps/base/frontend/hackathon/allow-hackathon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hackathon-ingress
spec:
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
